still buggy localStorage items can not be deleted by delete button

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="dark">
+<html lang="en" data-theme="light">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
   <title>Simple JS ToDo App</title>
   <link rel="stylesheet" href="pico.min.css">
   <link rel="stylesheet" href="style.css">
@@ -17,11 +17,11 @@
 <body>
   <div class="container">
     <div class="flex">
-    <h1>Todo App</h1>
-    <button class="themeToggle theme-toggle mode" style="border: none; background: none; font-size: 24px; cursor: pointer;">
-      <i class="fas fa-moon"></i>
-      <i class="fas fa-lightbulb" style="display: none;"></i>
-    </button>
+      <h1>Todo App</h1>
+      <button class="themeToggle theme-toggle mode" style="border: none; background: none; font-size: 24px; cursor: pointer;">
+        <i class="fas fa-moon"></i>
+        <i class="fas fa-sun" style="display: none;"></i>
+      </button>
     </div>
     <div class="todo-form grid">
       <input type="text" id="todo-input" placeholder="Enter a new task">
